client/lab_5/styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  margin: 0;
  padding: 0;
  font-family: ‘Segoe UI’, Candara, ‘Bitstream Vera Sans’, ‘DejaVu Sans’,
    ‘Bitsream Vera Sans’, ‘Trebuchet MS’, Verdana, ‘Verdana Ref’, sans-serif;
  background-color: darkslategray;
}


/* Page Layout */
.columns {
  display: flex;
  flex-wrap: wrap;
}

.wrapper {
  display: flex;
}
.container {
  max-width: 960px;
  margin-top: 25px;
}

.form-row {
  margin-bottom: 40px;
  display: flex;
  justify-content: flex-start;
  flex-direction: column;
  flex-wrap: wrap;
}
.form-row input[type='text'] {
  border-radius: 3px;
  width: 100%;
  padding: 7px;
  font-size: 14px;
}

.form-row label {
  margin-bottom: 15px;
}
.legacy-form-row {
  border: none;
  margin-bottom: 40px;
}

.legacy-form-row legend {
  margin-bottom: 15px;
}
.legacy-form-row .radio-label {
  display: block;
  font-size: 14px;
  padding: 0 20px 0 10px;
}
.legacy-form-row input[type='radio'] {
  margin-top: 2px;
}
  
.legacy-form-row .radio-label,
.legacy-form-row input[type='radio'] {
  float: left;
}
.form-row select {
  width: 100%;
  padding: 5px;
  font-size: 14px;            /* This won't work in Chrome or Safari */
  -webkit-appearance: none;   /* This will make it work */
}
.quiz{
  align-items: center;
  justify-content: center;
  
}
.header{
  background-color: yellow;
  font-size: 40px;
  border-radius: 5px;
}
.temp{
  background-color: white;
  align-items: center;
  justify-content: center;
  padding: 5px;
  border-radius: 5px;
}
.form-row button {
  font-size: 16px;
  font-weight: bold;

  color: #FFFFFF;
  background-color: lightgreen;

  border: none;
  border-radius: 3px;

  padding: 10px 40px;
  cursor: pointer;
  width:100px;
  text-align: left;
}

